# Dusk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.txt  cpp.hint
dusk/: CMakeLists.txt
dusk/src/: dusk.h  engine.cpp  engine.h  stats_recorder.cpp  stats_recorder.h
dusk/src/backend/vulkan/: vk.cpp  vk.h  vk_allocator.cpp  vk_allocator.h  vk_base.h  vk_cmdbuffer_pool.h  vk_debug.cpp  vk_debug.h  vk_descriptors.cpp  vk_descriptors.h  vk_device.cpp  vk_device.h  vk_pass.h  vk_pipeline.cpp  vk_pipeline.h  vk_pipeline_layout.cpp  vk_pipeline_layout.h  vk_renderer.cpp  vk_renderer.h  vk_renderpass.cpp  vk_renderpass.h  vk_swapchain.cpp  vk_swapchain.h  vk_types.h
dusk/src/core/: application.cpp  application.h  base.h  buffer.h  dtime.h  entrypoint.h  error.h  key_codes.h  log.cpp  log.h  mouse_codes.h
dusk/src/debug/: debug.cpp  profiler.h  renderdoc.h  tracy.h
dusk/src/events/: app_event.h  event.h  event_bus.h  key_event.h  mouse_event.h
dusk/src/extras/: stats_recorder.cpp  stats_recorder.h
dusk/src/loaders/: assimp_loader.cpp  assimp_loader.h  gltf_loader.cpp  gltf_loader.h  image_loader.cpp  image_loader.h  stb_image_loader.cpp  stb_image_loader.h
dusk/src/platform/: file_system.cpp  file_system.h  glfw_vulkan_window.cpp  glfw_vulkan_window.h  platform.h  window.cpp  window.h
dusk/src/renderer/: environment.cpp  environment.h  frame_data.h  gfx_buffer.cpp  gfx_buffer.h  gfx_device.h  gfx_enums.h  gfx_types.h  image.h  material.h  mesh.h  render_api.h  render_graph.cpp  render_graph.h  render_target.h  renderer.h  sub_mesh.cpp  sub_mesh.h  texture.cpp  texture.h  texture_db.cpp  texture_db.h  vertex.h
dusk/src/renderer/geometry/: aabb.h  frustum.h  plane.h  sphere.h
dusk/src/renderer/passes/: cull_lod_pass.cpp  g_buffer_pass.cpp  gen_env_passes.cpp  lighting_pass.cpp  presentation_pass.cpp  render_passes.h  shadow_pass.cpp  skybox_pass.cpp  tonemap_pass.cpp
dusk/src/renderer/systems/: basic_render_system.cpp  basic_render_system.h  grid_render_system.cpp  grid_render_system.h  lights_system.cpp  lights_system.h  skybox_render_system.cpp  skybox_render_system.h
dusk/src/renderer/systems/shaders/: aces.frag  basic_shader.frag  basic_shader.vert  brdf.glsl  brdf_lut.comp  common.glsl  cull_lod.comp  dir_shadows.frag  dir_shadows.vert  g_buffer.frag  g_buffer.vert  gen_cube_mips.comp  gen_env_cubemap.comp  gen_env_irrad_cubemap.comp  gen_env_prefil_cubemap.comp  grid.frag  grid.vert  hdr_skybox.frag  lighting.frag  present.frag  skybox.frag  skybox.vert  tonemap.frag
dusk/src/renderer/systems/textures/skybox/: Readme.md  hdr_dusk_sky_irradiance.hdr  hdr_dusk_sky_radiance.hdr
dusk/src/scene/: camera_controller.cpp  camera_controller.h  entity.cpp  entity.h  game_object.cpp  game_object.h  registry.cpp  registry.h  scene.cpp  scene.h  transform_system.cpp  transform_system.h
dusk/src/scene/comnponents/: transform.h
dusk/src/scene/components/: camera.h  lights.h  mesh.h  renderable.h  transform.h
dusk/src/ui/: dusk_imgui.ini  editor_ui.cpp  editor_ui.h  renderer_widgets.h  scene_widgets.h  stats_widgets.h  ui.cpp  ui.h  ui_states.h
dusk/src/utils/: hash.h  utils.h
samples/: CMakeLists.txt
samples/ibl_generator/: CMakeLists.txt  ibl_generator.cpp  ibl_generator.h
samples/ibl_generator/assets/shaders/: brdf.frag  brdf.vert  cubemap.frag  irradiance.frag  irradiance.vert  prefiltered.frag
samples/test_app/: CMakeLists.txt  test._app.h  test_app.cpp  test_app.h
samples/test_lights/: CMakeLists.txt  test_lights.cpp  test_lights.h
samples/test_lights/assets/scenes/: test_lights.gltf
samples/test_pbr/: CMakeLists.txt  test_pbr.cpp  test_pbr.h
samples/test_pbr/assets/scenes/metallic-roughness/: metallic-roughness.gltf  test_pbr.gltf
samples/test_scene/: CMakeLists.txt  test_scene.cpp  test_scene.h
samples/test_scene/assets/scenes/: 2_cubes.gltf  Scene.gltf  cube.gltf
samples/test_scene/assets/scenes/tea_cup/: DiffuseTransmissionTeacup.gltf
samples/test_sponza/: CMakeLists.txt  test_sponza.cpp  test_sponza.h
samples/test_triangle/: CMakeLists.txt  test_triangle.cpp  test_triangle.h
samples/test_triangle/assets/scenes/: test_scene.glb  test_scene.gltf
samples/test_triangle/assets/shaders/: simple.frag.spv  simple.vert.spv
